--- a/product-manager.html
+++ b/product-manager.html
@@ -40,8 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/carta/dacbc491-26ea-4d98-ba04-855a2fc8d5db'>Carta - Lead Product Manager, Data Platform</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ooF1afwY&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nGQlqMwy'>Freedom Financial Network Careers - Product Manager, Analytics</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/kjssi3eih7jhcc9fppb4zacapa'>Product Manager | Opportunity Portal</a></h5> 
+<p><span class="badge badge-light">Charlotte, NC</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/carta/dacbc491-26ea-4d98-ba04-855a2fc8d5db'>Carta - Lead Product Manager, Data Platform</a></h5> 
+<p><span class="badge badge-light">Seattle, WA  San Francisco Palo Alto Seattle New York City</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/connectedfitness/jobs/1939963'>Job Application for Product Designer at Under Armour </a></h5> 
@@ -100,7 +108,7 @@
 <p><span class="badge badge-light">Sunnyvale California Kitchener-Waterloo Canada  Sunnyvale California Kitchener-Waterloo Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4491874002'>Job Application for Technical Product Manager, SOC Platform at Arctic Wolf Networks</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4491874002'>Job Application for Technical Product Manager, SOC Platform at Arctic Wolf Networks</a></h5> 
 <p><span class="badge badge-light">Waterloo Ontario, Canada Utah, United States Sunnyvale United States  Kitchener-Waterloo Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -124,7 +132,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/axon/81e80557-ff55-402d-895b-438bbdda1141'>Axon - Principal Product Manager - Axon Records</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/axon/81e80557-ff55-402d-895b-438bbdda1141'>Axon - Principal Product Manager - Axon Records</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -150,7 +158,7 @@
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cultureamp/jobs/1940954'>Job Application for Senior Product Manager at Culture Amp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cultureamp/jobs/1940954'>Job Application for Senior Product Manager at Culture Amp</a></h5> 
 <p><span class="badge badge-light">Melbourne  Melbourne San Francisco New York London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -162,7 +170,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/fr/o/product-manager-internship-rotterdam'>
+<h5><a href='https://helloprint.recruitee.com/l/fr/o/product-manager-internship-rotterdam'>
       Product Manager Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -200,7 +208,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boh.referrals.selectminds.com/jobs/cash-management-product-manager-3967'>Cash Management Product Manager - Bank of Hawaii Careers</a></h5> 
+<h5><a href='https://boh.referrals.selectminds.com/jobs/cash-management-product-manager-3967'>Cash Management Product Manager - Bank of Hawaii Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -220,7 +228,7 @@
 <p><span class="badge badge-light">Alpharetta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://medbridge.applytojob.com/apply/am6o2wHuzq/Product-Manager-Mobile-Lehi-UT'>Product Manager - Mobile  (Lehi, UT) - MedBridge - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/am6o2wHuzq/Product-Manager-Mobile-Lehi-UT'>Product Manager - Mobile  (Lehi, UT) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light">Seattle Lehi, UT     Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -244,7 +252,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o9Tsbfwp'>Tenable Careers - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o9Tsbfwp'>Tenable Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -300,7 +308,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1940172'>Job Application for Product Manager  at ZipRecruiter</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1940172'>Job Application for Product Manager  at ZipRecruiter</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -390,7 +398,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/digitaltradecareers/job/o8tpbfwV'>Department for International Trade  - Digital, Data and Technology Careers - Product Manager / Associate Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/digitaltradecareers/job/o8tpbfwV'>Department for International Trade  - Digital, Data and Technology Careers - Product Manager / Associate Product Manager</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -398,11 +406,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999698557397-product-designer'>JobTeaser Product Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999698557397-product-designer'>JobTeaser Product Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dept/jobs/1935253'>Job Application for Senior Product Owner - Technology (m/w/div) at Dept</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dept/jobs/1935253'>Job Application for Senior Product Owner - Technology (m/w/div) at Dept</a></h5> 
 <p><span class="badge badge-light">Hamburg  Hamburg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -440,16 +448,6 @@
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999698547791-product-manager'>ShopUp Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dhaka, Bangladesh</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://shop-apotheke.join.com/jobs/471877-product-owner-m-w-d'>Job @ Shop Apotheke Europe (K?ln): PRODUCT OWNER (... | JOIN</a></h5> 
-<p><span class="badge badge-light">K?ln, Deutschland</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://wmreplyjobs.recruitee.com/o/product-owner-luton-contract-permanent'>
-      Product Owner - Luton - Contract & Permanent - WM Reply
-    </a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
