--- a/web-developer.html
+++ b/web-developer.html
@@ -38,11 +38,15 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://www.boxedred.com/blog/careers/web-developer/'>Web Developer - Boxed Red Marketing</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://www.php-resource.de/jobs/job,45585,Web-Entwickler-PHP-mwd-PHP-Entwickler--Web-Developer-PHP.htm'>Web Entwickler PHP (m/w/d) PHP Entwickler ? Web Developer PHP Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oW8uafws&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nP3jqMwS'>MORI Associates, Inc. Careers - JavaScript Web Developer - NASA Moon-Mars project</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oW8uafws&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nP3jqMwS'>MORI Associates, Inc. Careers - JavaScript Web Developer - NASA Moon-Mars project</a></h5> 
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -188,11 +192,11 @@
 <p><span class="badge badge-light">Dover, DE</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698470033-web-developer'>Devoteam Web developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698470033-web-developer'>Devoteam Web developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Malm?Copenhagen</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698471200-web-developer'>Devoteam Web developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698471200-web-developer'>Devoteam Web developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Copenhagen</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -208,7 +212,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oWVTafwE&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=n1LfoMwG'>ServiceNow Careers - Senior Marketing Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oWVTafwE&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=n1LfoMwG'>ServiceNow Careers - Senior Marketing Web Developer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -228,7 +232,7 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/catapultsports/jobs/1937028'>Job Application for Senior Full Stack Web Developer at Catapult Sports</a></h5> 
+<h5><a href='https://boards.greenhouse.io/catapultsports/jobs/1937028'>Job Application for Senior Full Stack Web Developer at Catapult Sports</a></h5> 
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -299,7 +303,7 @@
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/praktikum/e584885'>Stellenangebot: Web Developer PHP (m/w/d) (T?bingen) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/praktikum/e584885'>Stellenangebot: Web Developer PHP (m/w/d) (T?bingen) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -311,7 +315,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.pakngos.com.pk/job/trainer-web-designing-and-development'> Trainer-Web Designing and Development | PAK-NGOs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.pakngos.com.pk/job/trainer-web-designing-and-development'> Trainer-Web Designing and Development | PAK-NGOs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -397,7 +401,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dedeleads.com/job/world-travel-holdings-looking-for-junior-web-applications-developer/'>World Travel Holdings looking for Junior Web Applications Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/world-travel-holdings-looking-for-junior-web-applications-developer/'>World Travel Holdings looking for Junior Web Applications Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -417,7 +421,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Berlin Berlin, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/aspireiq/jobs/4486021002'>Job Application for Web Developer (Contract)  at AspireIQ</a></h5> 
+<h5><a href='https://boards.greenhouse.io/aspireiq/jobs/4486021002'>Job Application for Web Developer (Contract)  at AspireIQ</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -449,10 +453,6 @@ Develop process requirements and implement product development and release
 <hr/>
 <h5><a href='https://apiax.join.com/jobs/458971-front-end-web-developer'>Job @ Apiax (Lisbon): Front-End Web Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Lisbon Lisbon, Portugal</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='http://intrepidsolutions.applytojob.com/apply/ORjGF7RyY4/Web-Developer'>Web Developer - Intrepid Solutions and Services, LLC - Career Page</a></h5> 
-<p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
