--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -124,7 +124,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://edrans.applytojob.com/apply/ovSlQyjI2B/Sysadmin-SRE-Site-Reliability-Engineer-SSRSR'>Sysadmin - SRE (Site Reliability Engineer) SSR/SR - Edrans SA - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://edrans.applytojob.com/apply/ovSlQyjI2B/Sysadmin-SRE-Site-Reliability-Engineer-SSRSR'>Sysadmin - SRE (Site Reliability Engineer) SSR/SR - Edrans SA - Career Page</a></h5> 
 <p><span class="badge badge-light">Buenos Aires, Argentina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -200,11 +200,11 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=navqlMwH'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=navqlMwH'>Smarsh Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://axosoft.breezy.hr/p/7fe0a4b78be7-site-reliability-engineer'>Site Reliability Engineer at Axosoft</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://axosoft.breezy.hr/p/7fe0a4b78be7-site-reliability-engineer'>Site Reliability Engineer at Axosoft</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -216,7 +216,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ofnmbfwT'>WebMD Careers - Software Developer, Site Reliability</a></h5> 
+<h5><a href='https://jobs.jobvite.com/webmd/job/ofnmbfwT'>WebMD Careers - Software Developer, Site Reliability</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -236,7 +236,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hingehealth/fc5417af-7309-4e45-82ec-8014b607bba9'>Hinge Health - Senior Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hingehealth/fc5417af-7309-4e45-82ec-8014b607bba9'>Hinge Health - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -268,7 +268,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oHK89fws&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=n0DmjMwz'>Palo Alto Networks Careers - Intern - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oHK89fws&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=n0DmjMwz'>Palo Alto Networks Careers - Intern - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -327,7 +327,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p>6 days ago ... ... and to proactively manage production and change activities to maximize 
 customer experience, and increase the overall value of supported applications.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698002775-cloud-site-reliability-engineer-sre-'>4Catalyzer Cloud Site Reliability Engineer (SRE) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698002775-cloud-site-reliability-engineer-sre-'>4Catalyzer Cloud Site Reliability Engineer (SRE) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -347,11 +347,11 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">San Mateo, California  San Mateo</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/smartsheet/jobs/1925787'>Job Application for Senior Site Reliability Engineer - Network at Smartsheet</a></h5> 
+<h5><a href='https://boards.greenhouse.io/smartsheet/jobs/1925787'>Job Application for Senior Site Reliability Engineer - Network at Smartsheet</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qomaVfwz&k=Job&j=oTfVafwX&__jvst=Employee&__jvsd=sQC4fiwy&__jvsc=Twitter&bid=nmdUgMw0&jvi=oTfVafwX,Job&jvk=Job'>Blizzard Entertainment Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qomaVfwz&k=Job&j=oTfVafwX&__jvst=Employee&__jvsd=sQC4fiwy&__jvsc=Twitter&bid=nmdUgMw0&jvi=oTfVafwX,Job&jvk=Job'>Blizzard Entertainment Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -405,7 +405,7 @@ believes?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://nianticlabs.com/jobs/software-engineer-site-reliability/'>Software Engineer, Site Reliability ? Niantic</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nianticlabs.com/jobs/software-engineer-site-reliability/'>Software Engineer, Site Reliability ? Niantic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
@@ -446,7 +446,7 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/addepar1/jobs/4480912002'>Job Application for Senior Site Reliability Engineer at Addepar</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/addepar1/jobs/4480912002'>Job Application for Senior Site Reliability Engineer at Addepar</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... As a SRE Engineer at Addepar, you will utilize your combination of significant 
 Linux experience, network knowledge, scripting abilities, information security and
